--- a/client/src/css/login.css
+++ b/client/src/css/login.css
@@ -3,7 +3,9 @@
     background-image: url('../assets/naturalez.jpg');
     background-position: center center;
     background-size: cover;
-
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .mainContainer {
@@ -13,7 +15,6 @@
     justify-content: center;
     height: 600px;
     width: 450px;
-    margin-top: 300px;
     margin: auto;
     border: 2px solid rgb(129, 129, 129);
     border-radius: 10px;
