--- a/client/src/LandingPage/componentes/NavBar2.scss
+++ b/client/src/LandingPage/componentes/NavBar2.scss
@@ -42,7 +42,7 @@
 
     @media screen and (max-width: 768px) {
         .navBar {
-            background: var(--greyBg);
+            background: transparent;
             position: absolute;
             height: max-content;
             padding: 1rem;
