--- a/client/src/css/navbar.css
+++ b/client/src/css/navbar.css
@@ -10,73 +10,129 @@
     --InputColor: hsl(330, 12%, 97%);
 }
 
-.navbar{
-    background-color: #BABEBB;
-    height: 80px;
-    margin: 20px;
-    border-radius: 16px;
-    padding: 0.5rem;
+.navBar {
+    height: 85px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: var(--greyBg);
 }
 
-.login-button {
-    background-color: var(--PrimaryColor);
-    color: var(--whiteColor);
-    font-size: 14px;
-    padding: 8px 20px;
-    border-radius: 50px;
-    text-decoration: none;
-    transition: 0.3s background-color;
-}
-
-.login-button:hover {
-    background-color: var(--HoverColor);
-}
-
-.navbar-toggler {
-    border: none;
-    font-size: 1.25rem;
-}
-
-.navbar-toggler:focus,
-btn-close:focus {
-    outline: none;
-    box-shadow: none;
-}
-
-.nav-link {
-    color: var(--greyText);
-    font-weight: 500;
-    position: relative;
-}
-
-.nav-link:hover,
-.nav-link.active {
+.navBar > .nav-logo {
     color: var(--blackColor);
+    font-weight: 700;
+    font-size: 25px;
+    font-family: 'Times New Roman', Times, serif;
+    margin: 15px;
+    align-items: center;
+    justify-content: center;
 }
 
 
-@media (min-width: 991px) {
-    .nav-link::before {
+.navBar > .nav-items > .navlink {
+    color: var(--blackColor);
+    font-size: 19px;
+    font-weight: 500;
+    text-decoration: none;
+    margin: 15px;
+}
+
+.navBar > .nav-items > .navlink:hover {
+    opacity: 1;
+}
+
+.navBar > .nav-items > .navlink::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background: var(--PrimaryColor);
+    transition: all .45s;
+}
+
+.navBar > .nav-items > .navlink:hover::before {
+    width: 100%;
+}
+
+@media (max-width: 746px) {
+
+    .navBar>.nav-items {
+        position: absolute;
+        top: 60px;
+        display: flex;
+        flex-direction: column;
+        background: var(--greyBg);
+        left: 0;
+        width: 100%;
+        height: 100%;
+        transform: translateX(-100%);
+        transition: all .45s;
+    }
+
+    .navBar>.nav-items>.navlink::before {
+        background: transparent;
+    }
+
+    .navBar>.nav-items.open{
+        transform: translateX(0);
+    }
+
+    .nav-toggle {
+        display: flex;
+        width: 50px;
+        height: 50px;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+    }
+
+    .nav-toggle>.bar {
+        position: relative;
+        width: 32px;
+        height: 2px;
+        background: var(--PrimaryColor);
+    }
+
+    .nav-toggle>.bar::before,
+    .nav-toggle>.bar::after {
         content: "";
         position: absolute;
-        bottom: 0;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 0;
+        background: var(--PrimaryColor);
+        transition: all .45s ease-in-out;
         height: 2px;
-        background-color: var(--PrimaryColor);
-        visibility: hidden;
-        transition: 0.3s ease-in-out;
+        border-radius: 2px;
+
     }
 
-    .nav-link:hover::before,
-    .nav-link.active::before {
-        width: 100%;
-        visibility: visible;
+    .nav-toggle>.bar::before {
+        width: 35px;
+        transform: translateY(-8px);
+        right: 0;
+    }
+
+    .nav-toggle>.bar::after {
+        width: 32px;
+        transform: translateY(8px);
+    }
+
+    .nav-toggle.open>.bar {
+        transform: translateX(-40px);
+        background: transparent;
+    }
+
+    .nav-toggle.open > .bar::before {
+        width: 32px;
+        transform: rotate(45deg) translate(26px, -26px);
+    }
+
+    .nav-toggle.open > .bar::after {
+        transform: rotate(-45deg) translate(26px, 26px);
     }
 }
 
-.contenido{
+.contenido {
     position: relative;
     margin: 8rem 2rem;
 }
